fixed spacing issues

--- a/codeStyle.css
+++ b/codeStyle.css
@@ -1448,8 +1448,12 @@ html {
     }
 
     /* cards styling */
+    #helpingHand {
+        margin-top: -100px;
+    }
+
     #motherHen {
-        margin-top: -150px;
+        margin-top: -100px;
     }
 
     #birdApp {
